# gtest_demo

./: .gitignore  CMakeLists.txt
test/: CMakeLists.txt  hello_test.cpp  sample_test.cpp
